먼가 많이 고침

--- a/TechNotes/javascript-practices/12.Development Environments/02. npm.md
+++ b/TechNotes/javascript-practices/12.Development Environments/02. npm.md
@@ -1,19 +1,17 @@
-02. npm
-
 ## 패키지 관리
 
-#### 3-1. 패키지
+### 패키지
 
 1. 완전한 애플리케이션, 코드 샘플, 프로젝트에서 사용하는 모듈 또는 라이브러리
 2. npm은 이런 다양한 형태의 패키지들을 관리하는 도구이다.
 
-#### 3-2. 의존성(Dependency)
+### 의존성(Dependency)
 
 1. 개발하고 있는 패키지의 프로젝트에 설치하고 사용하는 다른 패키지들을 의존성이라 한다.
 2. 일반 의존성 : 개발 중인 프로젝트 패키지가 사용하고 있는 패키지들로 배포에 꼭 포함되어야 패키지들이다.
 3. 개발 의존성 : 주로 개발에 필요하거나 도움이 되는 패키지들이다. 배포에 꼭 포함될 필요는 없다.
 
-#### 3-3. 패키지 설치 방식
+### 패키지 설치 방식
 
 1. 전역(global) 설치 : 여러 개발에서 공통적으로 자주 사용되는 도구들을 설치한다.
 2. 지역(local) 설치 : 특정 프로젝트에만 종속적인 패키지나 도구들을 설치한다.
@@ -22,11 +20,11 @@
 
  1. 실습 프로젝트 디렉토리 project-ex01 만들기
 
-	![ch02-0001.png](../../_resources/218c9f9cc8e543b6b67093fc2de11844.png)
+	![ch02-0001.png](../../_resources/ch02-0001.png)
 
  2. underscore 설치 해보기
 	
-	![ch02-0002.png](../../_resources/ac17971b73fc4f8f90cf3e98ca39b078.png)
+	![ch02-0002.png](../../_resources/ch02-0002.png)
 
     + 프로젝트 project-ex01에 package.json 파일이 없다는 경고와 패키지 구성요소가 빠져있다는 경고가 뜬다. 
 
@@ -44,7 +42,7 @@
 
     + 특정버젼(v1.8.0)  설치 해보기
   
-	![ch02-0003.png](../../_resources/e19302bd1780424b9de3871a60e35271.png)
+	![ch02-0003.png](../../_resources/ch02-0003.png)
 ​          
 
  3. 프로젝트 의존성 초기화  : 초기화하는 방법은 단순하다. node_modules, package.json, package-lock. json 모두 삭제하면 된다.
@@ -63,7 +61,7 @@
 
  4. npm init 명령으로 package.json 파일 생성하기
 	
-	![ch02-0033.png](../../_resources/efb7ef1913664ffdacdf5f32f0cddf39.png)
+	![ch02-0033.png](../../_resources/ch02-0033.png)
 
     + 비교적 쉽게 만들 수 있다.
     + 프로젝트 설정에 필요한 몇 가지 질문을 하는데 엔터를 눌러 기본으로 설정한다.
@@ -127,8 +125,7 @@
   
 + ㅇㅈㅇㅉ
 
-
-​          
+         
 
 ### 4. 패키지 배포
 
@@ -151,7 +148,7 @@
 
  1. 패키지 kickscar-math 프로젝트 디렉토리 만들기
 
-	![ch02-0004.png](../../_resources/3a4e2c88642742d3a9e9689db3832ce3.png)
+	![ch02-0004.png](../../_resources/ch02-0004.png)
 
  2. kickscar-math.js 작성
 
@@ -191,7 +188,7 @@
 
  3. 테스트 애플리케이션을 작성할 프로젝트 project-ex02 디렉토리 만들기
 	
-	![ch02-0005.png](../../_resources/0ae05a29a7a44f5f845aeeca5c8c821f.png)
+	![ch02-0005.png](../../_resources/ch02-0005.png)
 
  4. 테스트 애플리케이션 app-ex01.js 작성 : 파일 모듈 테스트
 
@@ -207,7 +204,7 @@
 
     + 실행 결과
 	  
-      ![ch02-0006.png](../../_resources/061fbc5e58ec4bdc9c9707aa87ad93ec.png)
+      ![ch02-0006.png](../../_resources/ch02-0006.png)
 
  5. 테스트 애플리케이션 app-ex02.js 작성 : npm 모듈 테스트
 
@@ -229,23 +226,23 @@
 
     + package.json 파일 생성하기
 
-	  ![ch02-0007.png](../../_resources/4c15342952ab489e984094b4405dd50d.png)
+	  ![ch02-0007.png](../../_resources/ch02-0007.png)
 
     + 이제 project-ex02 디렉토리에서 kickscar-math 모듈 패키지를 npm으로 설치 해보자.
 	  	  
-	  ![ch02-0008.png](../../_resources/a55a24928a064b3f85781f0a2dab2e29.png)
+	  ![ch02-0008.png](../../_resources/ch02-0008.png)
 
     + node_modules 디렉토리의 내용을 확인해보자 
 	  	  
-	  ![ch02-0009.png](../../_resources/c7dbd64aa29543b3845f5a418ae96ef4.png)
+	  ![ch02-0009.png](../../_resources/ch02-0009.png)
 
     + app-ex02.js 를 실행해보자.
 	  	  
-	  ![ch02-0010.png](../../_resources/45d8624ac50f4f2c94d8ff68f2429d3b.png)
+	  ![ch02-0010.png](../../_resources/ch02-0010.png)
 
     + npm 설치와 함께 생성된 package-lock.json 내용을 확인해보자.
 	  
-	  ![ch02-0011.png](../../_resources/3f14749fd6864bdaafdd003dd21f1628.png)
+	  ![ch02-0011.png](../../_resources/ch02-0011.png)
 
 #### 4-3. npm registry에 원격 배포하고 설치하기
 
@@ -261,22 +258,22 @@
 
  3. npm계정 정보 입력
 	
-	![ch02-0012.png](../../_resources/1154245c17c74829a2ff73514a3706ca.png)
+	![ch02-0012.png](../../_resources/ch02-0012.png)
 
     + 먼저 NPM(www.npmjs.com)에 계정 등록(가입)을 해야한다.
     + npm adduser 명령으로 npm 자신의 계정에 로그인 하자.
 
  4. 모듈 패키지 kickscar-math 업로드 하기
 	
-	![ch02-0013.png](../../_resources/c4ac6c926fe44f0db30f67d140991a08.png)
+	![ch02-0013.png](../../_resources/ch02-0013.png)
 
  5. npm 계정에서 패키지 업로드 확인하기
 
-	![ch02-0014.png](../../_resources/968080bda3cf42c5afb33a2a0a13b04a.png)
+	![ch02-0014.png](../../_resources/ch02-0014.png)
 
  6. 테스트 애플리케이션을 작성할 프로젝트 project-ex03 디렉토리 생성
 		
-	![ch02-0015.png](../../_resources/cfc61ba79b07431d83f90814be6444f3.png)
+	![ch02-0015.png](../../_resources/ch02-0015.png)
 
  7. 테스트 애플리케이션 app-ex01.js 작성
 
@@ -296,7 +293,7 @@
 
  8. kickscar-math 모듈 패키지 설치하기
 	
-	![ch02-0016.png](../../_resources/ba4b4e36ee844477aa0b208b22123732.png)
+	![ch02-0016.png](../../_resources/ch02-0016.png)
 
     + `npm install kickscar-math` 패키지 이름만으로 다운로드해서 설치된다.
 
@@ -304,13 +301,13 @@
 
  9. 테스트 애플리케이션 app-ex01.js 실행하기
 	
-	![ch02-0017.png](../../_resources/0466e96eb9c444cbb31d5ba2f0866f3d.png)
+	![ch02-0017.png](../../_resources/ch02-0017.png)
 
 #### 4-5. [실습] package.json 의존성 관리의 문제점 : 준비작업
 
  1. 문제점을 테스트 하기위해 kickscar-math 패키지에 의존성을 가지는 kickscar-calculate 모듈 패키지를 npm 레지스트리에 등록 하였다.
 	
-	![ch02-0052.png](../../_resources/f5e17d26ee3e4d8888aa6c83de1370e5.png)
+	![ch02-0052.png](../../_resources/ch02-0052.png)
 
  2. kickscar-calculate 모듈 코드는 비교적 간단하다. kickscar-calculator.js에 run(functionName, numbers) 함수를 작성해서 export한다.
 
@@ -374,7 +371,7 @@
 
  7. `npm ll` 또는 `npm ls` 로 의존성 구조 확인해 보고 app-ex01.js 의 실행에 문제가 없는지 테스트 한다.
 	
-	![ch02-0053.png](../../_resources/eb91795ede924baebe10034ee903ef0e.png)
+	![ch02-0053.png](../../_resources/ch02-0053.png)
 
  8. kickscar-calculate 패키지를 패치(1.0.1)하고 배포하기
 
@@ -419,25 +416,25 @@
 
     + `npm publish`로 패치 배포를 한다.
 
-	  ![ch02-0055.png](../../_resources/42852d9a10654dcda556f381d1120b15.png)
+	  ![ch02-0055.png](../../_resources/ch02-0055.png)
       
     + npm에서 확인한다.
 	  
-	  ![ch02-0056.png](../../_resources/f07da7156d524705a37c8d95fc7bea73.png)
+	  ![ch02-0056.png](../../_resources/ch02-0056.png)
     
 
  9. 실습의 주목적인 "의존성을 가진 패키지의 버젼이 업그레이드(패치)되는 경우" package.json이 어떤 문제를 발생시키는 지 테스트 해보자.
 
     + project-ex04를 형상관리를 통해 다른 개발자가 받았다고 가정하자. 그리고 node_modules을 삭제하고 `npm i` 명령으로 package.json만으로 의존성을 install 해보자.
 	  
-	  ![ch02-0057.png](../../_resources/f181d4f4fa7045048ea71251c841a327.png)
+	  ![ch02-0057.png](../../_resources/ch02-0057.png)
 
 
     + 동일한 프로젝트 project-ex04 이지만 의존성 패키지 kickscar-calculate 패치버젼으로 바꿔 있음을 알 수가 있다.
 
     + 이 프로젝트를 받아 개발하는 다른 개발자는 2개 이상의 숫자를 입력하게 되면 앞의 개발자와 다른 결과로 다소 혼란을 겪을 것이라 충분히 예상할 수 있다.
 	  
-	  ![ch02-0058.png](../../_resources/3cdcb7edcb7b4f8e85398d5135a5ff2e.png)
+	  ![ch02-0058.png](../../_resources/ch02-0058.png)
       
     + 이 문제가 발생하는 이유는 패키지 설치시 package.json에 반영되는 버젼 표기방식이 Caret Range 방식으로 되어 있기 때문에 npm install을 수행하는 시점에 따라 달라지기 때문이다.
 
@@ -479,7 +476,7 @@
        
      + `npm install` 후, 실행시키면 문제가 없음을 확인할 수 있다.
 		
-		![ch02-0059.png](../../_resources/66b09ad7078549ed99e5d1a530f06651.png)
+		![ch02-0059.png](../../_resources/ch02-0059.png)
 
      + 두 번째 방법은, package.json은 문제점을 보완한 npm 5.x 를 사용하면 된다. npm 를 사용해 의존성 패키지를 설치하면 package-lock.json이 자동적으로 생성되고 업데이트 된다. package-lock.json은 패키지가 설치되어 있는 node_modules의 상태를 그대로 반영하고 있기 때문에  package-lock.json 기반으로 install를 하게 되면 kickscar-calculate 패치 이전 버젼(v1.0.0) 으로 설치되고 결과가 달라지는 혼동을 피할 수 있다. 
 
@@ -511,7 +508,7 @@
 
      + node_modules가 있으면 삭제하고 `npm install`로 의존성 패키지를 설치하고 테스트 해보자.
 		
-		![ch02-0060.png](../../_resources/8b731b59eca04eb4ae0197506a2d07ea.png)
+		![ch02-0060.png](../../_resources/ch02-0060.png)
 
      + 앞의 실습에서는 의존성을 가진 패키지의 버젼이 업그레이드(패치)되는 경우의 package.json의 문제를 알아보고 해결했다. 개발하고 있는 프로젝트가 가진 의존성 패키지의 버젼 문제이기 때문에  버젼을 고정시키기 위해 package.json을 수정하여  해결할 수 있었다. package-lock.json 없어도 해결할 수 있는 문제라 볼 수 있다.
 
@@ -548,11 +545,11 @@
 
  3. npm에서 확인 한다.
 		
-	![ch02-0061.png](../../_resources/1830f4ffa56e448b8828b3aa921bb7f4.png)
+	![ch02-0061.png](../../_resources/ch02-0061.png)
     
  4. 프로젝트 project-ex05 디렉토리를 생성하고 app-ex01.js를 작성한다.
 	
-	![ch02-0026.png](../../_resources/da7f2df6a2c042aa93c1481600998a72.png)
+	![ch02-0026.png](../../_resources/ch02-0026.png)
     
  5. app-ex01.js 의 내용
 
@@ -588,7 +585,7 @@
 
  8. 프로젝트 project-ex05 디렉토리 내용을 확인하고  app-ex01.js가 정상적으로 작동하는지 확인하자. 그리고 패키지 의존성도 확인해 본다.
 	
-	![ch02-0062.png](../../_resources/390d505782ff42f99d3276ba112566bd.png)
+	![ch02-0062.png](../../_resources/ch02-0062.png)
     
 
  9. package.json의 의존성 관리 문제점을 확인한 후, 해결하기 위해서는 package-lock.json이 필요하기 때문에 package-lock.json이 생성된 현재 프로젝트 project-ex05를 project-ex05-lock으로 백업한다.
@@ -676,20 +673,20 @@
            
 
          + npm에서 확인한다.		   
-			![ch02-0063.png](../../_resources/8e5afcfc51f54297bb48da417ad7162b.png)
+			![ch02-0063.png](../../_resources/ch02-0063.png)
      
 
  12. 이제, 실습의 주목적인 "의존성을 가진 패키지가 의존하는 패키지의 버젼이 업그레이드되는 경우" package.json이 가지는 문제점을 테스트 해보자.
 
  13. project-ex05를 형상관리를 통해 다른 개발자가 받았다고 가정하자. 그리고 node_modules을 삭제하고 프로젝트를 package.json만으로 install 해보자.
 	 	 
-	 ![ch02-0064.png](../../_resources/73cad72529b74a988e5510dabefe55eb.png)
+	 ![ch02-0064.png](../../_resources/ch02-0064.png)
 	 
      + 동일한 프로젝트 project-ex05이지만 의존성 패키지 kickscar-calculator가 의존성을 가지고 있는 패키지kickscar-math의 버젼이 업그레이드 버젼(v1.2.0)으로 바꿔 있음을 알 수가 있다.
 
      + 이 프로젝트를 받아 개발하는 다른 개발자는 sum 함수를 사용하는 루틴을 작성하게 되면 앞의 개발자가 만나지 못했던 에러(undefined function)를 맞이하게 될 것이라 충분히 예상할 수 있다.
 		
-		![ch02-0065.png](../../_resources/dea6a5b0dfdf4caa958ec63e2884c7ed.png)
+		![ch02-0065.png](../../_resources/ch02-0065.png)
        
 
  14. 문제 해결
@@ -701,7 +698,7 @@
      + package-lock.json은 kickscar-math 패키지가 업그레이드 이전에 설치되었던 node_modules의 상태를 그대로 반영하고 있기 때문에  package-lock.json 기반으로 install 하게 되면 kickscar-calculator(v1.0.0) 뿐만 아니라 이 패키지가 의존하고 있었던 kickscar-math의 처음 설치 버젼(v1.0.0)으로 설치할 수 있다.
 
      + project-ex05-lock은 kickscar-math의 업그레이드 이전의 프로젝트를 복사해 놓은 프로젝트이다. node_modules 디렉토리 삭제 후, `npm install` 로 설치하고 테스트 해보자.		
-		![ch02-0066.png](../../_resources/1cf0615a4cdf45d6a98bb452b4ffb8d4.png)
+		![ch02-0066.png](../../_resources/ch02-0066.png)
        
        
      + 이는 처음  설치 시, kickscar-calc의 의존 패키지 kickscar-math의 업그레이드 이전 버젼 v1.0.0이 package-lock.json 파일에 고정 되기 때문이다. 확인해 보자.
