--- a/TechNotes/javascript-practices/12.Development Environments/03. Mocha.md
+++ b/TechNotes/javascript-practices/12.Development Environments/03. Mocha.md
@@ -1,20 +1,18 @@
-03. Mocha
-
-## 자바스크립트 단위 테스트 도구
- 애자일(Agile) eXtreme Programming의 TDD, BDD를 위한 단위 테스트가 소프트웨어 개발에 많이 적용되고 있다. 이를 도와주는 도구들이 거의 모든 언어별로 지원되고 있고 자바스크립트만 하더라도 스무 여가지가 된다. Java 진영에 JUnit이라는 대표적 단위 테스트 도구가 있듯이 자바스크립트에는 JSUnit이라는 단위 테스트 도구가 있었지만 벌써부터 개발이 중지되어 있는 상태다. 2010년에 JSUnit 프로젝트를 이어받은 Jasmine이 발표되었고 꾸준히 사용되고 있다. 한편, 2008년에 발표된 DOM 조작 라이브러리 jQuery가 큰 인기를 끌면서 jQuery 기반 코드 테스트에 QUnit이 많이 활용되었고 현재에도 jQuery 기반 비동기 코드 테스트에 많이 활용된다. 2009년에는 Node가 발표되었고 자바스크립트 기반 백엔드 개발에 활용되기 시작하였다. 따라서 Node 모듈 테스트를 위한 도구가 필요해졌고 2012년에 Mocha가 다른 테스트 도구에 비해 비교적 늦게 발표되었다. 
+### 자바스크립트 단위 테스트 도구
+ 애자일(Agile) eXtreme Programming의 TDD, BDD를 위한 단위 테스트가 소프트웨어 개발에 많이 적용되고 있다. 이를 도와주는 도구들이 거의 모든 언어별로 지원되고 있고 자바스크립트만 하더라도 스무 여가지가 된다. Java 진영에 JUnit이라는 대표적 단위 테스트 도구가 있듯이 자바스크립트에는 JSUnit이라는 단위 테스트 도구가 있었지만 2010년 개발이 중지되었고 이를 이어받은 Jasmine이 발표되어 현재까지 사용되고 있다. 
  
- 정리하면, 현재 인기가 있는 JavaScript 단위 테스트 도구는 QUnit, Mocha, Jasmine 이렇게 세 가지 정도로 요약할 수 있다. 세 가지 도구들이 각각의 장점들이 있으며 개발자나 팀 그리고 프로젝트 특성에 맞게 선택되고 활용되는 것 같다. 그리고 그 선택 기준도 비교적 분명하다.
+ 한편, 2008년에 발표된 DOM 조작 라이브러리 jQuery가 큰 인기를 끌면서 jQuery 기반 코드 테스트에  jQuery 개발자 존레식(John Resig)에 의해 개발된 QUnit이 많이 사용되었고 지금도 jQuery 기반 비동기 코드 테스트에 많이 사용된다. 2009년에는 Node가 발표되어 자바스크립트 기반 백엔드 개발에 활용되었다. Node가 인기를 끌면서 Node 모듈 테스트를 위한 테스트 도구가 필요해졌는데 2012년, Mocha가 다른 테스트 도구에 비해 비교적 늦게 발표되면서 이를 지원하고 있다. 
  
- 보통, Node 기반 서버 개발이나 컴파일을 해야하는 JavaScript 애플리케이션 개발이 아닌 브라우저 DOM조작 애플리케이션을 jQuery 기반으로 작성하는 경우가 있다. 이 때에는 세팅이 비교적 쉽고 간단한 QUnit를 사용한다. QUnit은 jQuery 라이브러리 테스트를 위해 jQuery 개발자 존레식(John Resig)에 의해 개발되었고 jQuery 기반 코드 테스트에 많이 쓰인다. 최근의 자바스크립트 프론트엔드 애플리케이션 개발을 보면, 느린 브라우저의 직접적인 DOM 조작보다는 라이브러리(React와 같은)가 지원하는 가상 DOM 조작 API를 활용하는 방식으로 많이 작성된다. 이런 방식이 점점 인기를 끌면서 현재에는 QUnit은 인기는 많이 떨어져 있는 상태다.
-
- Node 기반 백엔드 개발이나 그리고 방금 언급한 형태의 자바스크립트 애플리케이션 개발에는 Jasmine과 Mocha를 고려하는 편이다. 세 가지 테스트 도구들은 당연 비동기 코드 테스트를 지원하지만 Mocha는 Promise를 지원하기 때문에 아무래도 비동기 테스트에는 Mocha를 우선 선택하게 된다. 참고로 QUnit도 Promise를 지원한다.
+ 정리하면, 현재 인기가 있는 JavaScript 단위 테스트 도구는 QUnit, Mocha, Jasmine 이렇게 세 가지 정도로 요약할 수 있다. 세 가지 도구들이 각 각의 장점들이 있으며 개발자나 팀 그리고 프로젝트 특성에 맞게 선택되고 활용되는 것 같다. 그리고 그 선택 기준도 비교적 다음과 같이 분명하다.
+ 
+ Node 기반 서버 개발이나 컴파일을 해야하는 JavaScript 애플리케이션 개발이 아닌 브라우저 DOM조작 애플리케이션을 jQuery 기반으로 작성하는 경우가 있다. 이 때에는 세팅이 비교적 쉽고 간단한 QUnit를 사용한다. 최근의 자바스크립트 프론트엔드 애플리케이션 개발을 보면, 느린 브라우저의 직접적인 DOM 조작보다는 라이브러리(React와 같은)가 지원하는 가상 DOM 조작 API를 활용하는 방식으로 많이 작성된다. 이런 방식이 점점 인기를 끌면서 현재에는 QUnit은 인기는 많이 떨어져 있는 상태다. Node 기반 백엔드 개발이나 그리고 방금 언급한 형태의 자바스크립트 애플리케이션 개발에는 Jasmine과 Mocha를 고려하는 편이다. 세 가지 테스트 도구들은 당연 비동기 코드 테스트를 지원하지만 Mocha는 Promise를 지원하기 때문에 아무래도 비동기 테스트에는 Mocha를 우선 선택하게 된다. 참고로 QUnit도 Promise를 지원한다.
 
  테스트 도구에서 assertion 표현이 풍부하면 여러모로 장점이 많다. Jasmine은 자체적으로 assertion 라이브러리를 내장하고 있지만 Mocha는 없다. 대신에 Mocha는 Node에 내장된 assertion 모듈을 사용할 수 있고 chai, should.js, expect.js와 같은 외부 assertion 라이브러리들도 사용할 수 있는 유연함과 확장성을 가지고 있다. 하지만, 세팅과 학습에 다소 부담이 있는 것도 사실이다. 최근(2020년 기준)에는 Mocha가 Jasmine의 인기를 크게 앞질렀다. 두 도구는 테스트 함수와 문법이 서로 유사하기도 하지만 ES6 사용과 지원이 보편화 되면서 비동기의 Promise을 지원하는 Mocha가 우선 선택되는 것 같다. 개발자들에게 학습 부담이 유연함과 확장성을 포기할 만큼의 영향을 주지는 못하는 것 같다.
 
- 정리한다. 여러 테스트 도구에서 굳이 하나를 골라 추천한다면 개인적으로 당연 Mocha 이지만 사실, 여러 테스트 도구들이 사용에 유사성이 상당히 많고 Test Runner로는 모두 [Karma](https://github.com/karma-runner/karma)를 사용하고 있다. 따라서 크게 고민없이 셋 중에 어떤 것이라도 골라 사용한다면 다른 테스트 도구로 전환하는 데 큰 어려움이 없을 것이다. React로 화면을 개발하고 있다면 React에서 지원해주는 Jest기반의 테스트 프레임워크를 쓰는 것이 좋다. Jest는 페이스북이 React 라이브러리 개발의 테스트를 위해 개발되었다. jQuery를 기반하고 있는 코드는 QUnit이 좋을 것이다. Node 기반 개발에서는 Mocha와 Jasmine을 선택 할 수 있는데, BDD 개발 방식의 표준 테스팅 [RSpec](http://www.betterspecs.org/ko/)에 맞는 테스트 코드 작성이 필요하면 Jasmine 이다. 반면, Promise 기반의 비동기 코드 테스트를 쉽게 하고 싶다면 Mocha 다.   
+ 정리하면 여러 테스트 도구에서 굳이 하나를 골라 추천한다면 개인적으로 당연 Mocha 이지만 사실, 여러 테스트 도구들이 사용에 유사성이 상당히 많고 Test Runner로는 모두 [Karma](https://github.com/karma-runner/karma)를 사용하고 있다. 따라서 크게 고민없이 셋 중에 어떤 것이라도 골라 사용한다면 다른 테스트 도구로 전환하는 데 큰 어려움이 없을 것이다. React로 화면을 개발하고 있다면 React에서 지원해주는 Jest기반의 테스트 프레임워크를 쓰는 것이 좋다. Jest는 페이스북이 React 라이브러리 개발의 테스트를 위해 개발되었다. jQuery를 기반하고 있는 코드는 QUnit이 좋을 것이다. Node 기반 개발에서는 Mocha와 Jasmine을 선택 할 수 있는데, BDD 개발 방식의 표준 테스팅 [RSpec](http://www.betterspecs.org/ko/)에 맞는 테스트 코드 작성이 필요하면 Jasmine 이다. 반면, Promise 기반의 비동기 코드 테스트를 쉽게 하고 싶다면 Mocha 다.   
  
 
-## Mocha 설치
+### Mocha 설치
  npm 모듈로 설치한다. moch는 운영서버에 배포된 애플리케이션에 포함되어 함께 실행되는 모듈이 아니다. 개발과정과 배포에 사용되는 모듈이기 때문에 -D(개발 의존성) 옵션으로 설치한다. 설치 후에는 npx로 Mocha를 실행할 수 있으며 --version 옵션을 함께 사용해 버전 정보와 설치를 확인할 수 있다. 
 
 ```bash
@@ -23,7 +21,7 @@ $ npx mocha --version
 8.0.1 
 ```
 
-## 테스트 케이스 작성하기
+### 테스트 케이스 작성하기
  Mocha를 사용한 기본적인 테스트 케이스를 작성해 보자. 우선, 테스트 대상 모듈을 작성한다.
 
 [ex01.js]
@@ -49,7 +47,7 @@ describe('Hello World', function() {
 $ npx mocha test/ex01
 ```
 
-![8af99256066b12c292963ce7dcfdc07c.png](../../_resources/be2277007b734a84beef9e5ae870cd08.png)
+![8af99256066b12c292963ce7dcfdc07c.png](../../_resources/8af99256066b12c292963ce7dcfdc07c.png)
 
 테스트가 통과됐다. 별다른 설명 없이 테스트 케이스 모듈을 'test' 디렉토리에 작성했는데 대부분 테스트 도구들도 그렇지만 Mocha도 특정 테스트 케이스 모듈 지정없이 실행되면 자동으로 'test' 디렉토리 안의 모든 모듈을 테스트 케이스로 간주하고 일괄 테스트를 진행할 수 있다. 따라서 테스트 케이스 모듈은 보통 프로젝트 디렉토리 아래 'test' 디렉토리에 작성한다. 그러면 모듈 지정없이 Mocha를 실행 해보자.
 
@@ -76,7 +74,7 @@ $ npm test
 ```
 
 
-## Assertion 기본
+### Assertion 기본
  테스트 케이스에서 수행되는 테스트 결과를 판별하기 위해 테스트 통과 조건과 테스트 대상 코드를 명시해야 한다. 이를 위해 assertion 함수를 사용한다. Mocha로 테스트 케이스를 작성하고 테스트 할 때는 보통 외부 assertion 라이브러리를 사용하지만 기초적인 assertion 연습을 위해 Node의 assert 모듈만 사용해 보자.
  
 [ex02.js]
@@ -218,13 +216,13 @@ describe('Module ex02 Test', function() {
 ```
  테스트 결과이다. 다음 부터는 Mocha 테스트 케이스를 작성해서 활용하기로 한다.
 
-![8cc12867eb0f49b289868639c542d1e3.png](../../_resources/3f658bbb11a343a5afbfbc2a23147821.png)
+![8cc12867eb0f49b289868639c542d1e3.png](../../_resources/8cc12867eb0f49b289868639c542d1e3.png)
 
 
-## Assertion 외부 라이브러리 활용: chai 	
-## Assertion 외부 라이브러리 활용: should.js
-## 비동기 코드 테스트
-## Hook 
+### Assertion 외부 라이브러리 활용: chai 	
+### Assertion 외부 라이브러리 활용: should.js
+### 비동기 코드 테스트
+### Hook 
 
 
 
