--- a/TechNotes/javascript-practices/12.Development Environments/04. ESLint.md
+++ b/TechNotes/javascript-practices/12.Development Environments/04. ESLint.md
@@ -1,15 +1,11 @@
-04. ESLint
-
-### 1. 소개
-
-#### 1-1. 코드 품질 검증 도구
+### 코드 품질 검증 도구
 
 1. JavaScript는 인터프리터 언어이기 때문에 C/C++/Java와 같은 컴파일러 언어처럼 실행(Runtime) 전에 컴파일 과정에서 코드의 문제를 알아낼 수 없다.
 2. Lint 도구들은 이런 문제점을 보완하기 위한 유효성 검사 도구이다.
 3. 실행시 분석하는 동적 분석 도구라기 보다는 **정적 분석 도구**라 볼 수 있다.
 4. 실행시 문제를 일으킬 수 있는 코드를 분석을 통해 미리 제거할 수 있기 때문에 코드 품질 유지에 도움이 되는 도구이다.
 
-#### 1-2. 종류
+### 종류
 
 1. JSLint
    + JavaScript The Good Parts(번역서: 자바스크립트 핵심가이드)의 저자로 유명한 [더글라스 크락포드 (Douglas Crockford)](http://www.crockford.com) 가 JavaScript 구문 검사용으로 개발했다.
@@ -30,10 +26,7 @@
 
 
 
-### 2. ESLint 설치
-
-#### 2-1. 설치   
-
+### ESLint 설치
 1. 모든 프로젝트에 필수 도구라 볼 수 있기 때문에 전역(global) 설치를 한다.
 
    ```bash
@@ -44,7 +37,7 @@
 
    
 
-### 3. [실습] ESLint 적용하기
+### [실습] ESLint 적용하기
 
 #### 3-1. 프로젝트 project-ex01  생성
 
@@ -93,7 +86,7 @@
 
      
 
-#### 3-3. ESLint 적용하기
+### ESLint 적용하기
 
 1. ESLint 규칙 적용할 ex01.js 파일을 작성한다. 
 
