--- a/TechNotes/javascript-practices/01.Introduction/03. 주요 Library와 Frameworks.md
+++ b/TechNotes/javascript-practices/01.Introduction/03. 주요 Library와 Frameworks.md
@@ -1,10 +1,7 @@
-03. 주요 Library와 Frameworks
+### Node.js
 
-## Node.js
-
-## jQuery
-
-웹 클라이언트(브라우저) 프로그래밍에서 DOM 조작을 쉽게 할 수 있도록 작성된 자바스크립트 라이브러리이다. 존레식(John Resig)에 의해 개발되어 2006년 발표되었고 현재에도 그 인기를 꾸준히 유지해 오고 있다. 주요 기능은 다음과 같다.
+### jQuery
+웹 클라이언트(브라우저) 프로그래밍에서 DOM조작을 쉽게 할 수 있도록 작성된 자바스크립트 라이브러리이다. 존 레식(John Resig)에 의해 개발되어 2006년에 발표되었고 현재에도 인기를 꾸준히 유지해 오고 있다. 주요 기능은 다음과 같다.
 
 1.  DOM 탐색 및 수정
 2.  CSS 셀렉터에 기반한 DOM 조작
@@ -31,21 +28,20 @@
 7.  v3.1 (2016년 7월)
     jQuery.readyException 추가
 
-## Backbone.js
+### Backbone.js
 
-## React
+### React
+ 클라이언트 사이드의 유저 인터페이스 개발에 쓰이는 자바스크립트 라이브러리이다. 다른 웹프레임워크가 MVC, MVW 등의 구조를 지향하는데 반해 리액트는 오직 View만 담당하는데 이는 프레임워크라기 보다는 라이브러리라 볼 수 있다. 컴포넌트 단위로 애플리케이션을 작성한다. 라우터, Ajax, 상태관리를 위해서는 보통 프레임워크는 이를 다 내장하고 있지만 리액트는 외부 라이브러리나 코드를 사용할 수 있다. 보통, 라우팅에는 react-router, Ajax에는 axios, fetch, 상태 관리를 위해서는 redux, MobX 등을 사용한다. 리액트만 배워야 하는 것이 아니고 여러 라이브러리를 함께 익혀야 하는 단점도 있지만 개발에 맞는 스택을 설정할 수 있는 장점과 Backbone.js, Angular.js와 같은 다른 웹프레임워크와 조합할 수 있는 유연함도 있다.
 
- 클라이언트 사이드의 유저 인터페이스 개발에 쓰이는 자바스크립트 라이브러리이다. 다른 웹 프레임워크가 MVC, MVW 등의 구조를 지향하는데 반해 리액트는 오직 View만 담당하는데 이는 프레임워크라기 보다는 라이브러리라 볼 수 있다. 컴포넌트 단위로 애플리케이션을 작성한다. 라우터, Ajax, 상태관리를 위해서는 보통 프레임워크는 이를 다 내장하고 있지만 리액트는 외부 라이브러리나 코드를 사용할 수 있다. 보통, 라우팅에는 react-router, Ajax에는 axios, fetch, 상태 관리를 위해서는 redux, MobX 등을 사용한다. 리액트만 배워야 하는 것이 아니고 여러 라이브러리를 함께 익혀야 하는 단점도 있지만 개발에 맞는 스택을 설정할 수 있는 장점과 Backbone.js, Angular.js 와 같은 다른 웹프레임워크와 라이브러리와 조합할 수 있는 유연함도 있다.
-
- React의 가장 큰 특징은 Virtual DOM이다. 개발자가 작성하는 React API는 React의 Virtual DOM을 업데이트하고 React가 실제 브라우저의 DOM의 업데이트 처리 횟수를 최소화하고 효율적으로 처리한다. 기존 DOM API를 사용한 화면 개발에 익숙하여 이 특징을 이해하지 못하면 React 프로그래밍 모델에 맞지 않는 부자연스러운 코드를 작성할 가능성이 있다. 개발 지원을 정리하면 다음과 같다.
+ React의 가장 큰 특징은 Virtual DOM이다. 개발자가 작성하는 React API는 React의 Virtual DOM을 업데이트하고 React가 실제 브라우저의 Native DOM의 업데이트 처리 횟수를 최소화하고 효율적으로 처리한다. Native DOM API를 사용한 화면개발에 익숙하여 이 특징을 이해하지 못하면 React 프로그래밍 모델에 맞지 않는 부자연스러운 코드를 작성할 가능성이 있다. 개발 지원을 정리하면 다음과 같다.
 
 1.  기본적으로 Node를 사용하여 빌드와 개발용 서버 구동을 하여 개발을 진행한다.
-2.  ECMAScript 2015 (ES6) 기반의 JavaScript 코드를 작성하는 것이 보통이며 webpack을 사용하여 번들링 한다.
-3.  webpack이 지원하는 다양한 로더들을 사용하여 애플리케이션의 JavaScript 뿐만 아니라 CSS, 이미지, 폰트 등의 모든 assets들을 번들링한다.
-4.  로더들을 개별적으로 설치하고 설정해야 하기때문에 다양한 로더들의 설정 방법과 작동 원리 등을 이해해야 하는 부담이 있다.
-5.  CRA(create-react-app) 라는 도구를 사용하여 이 작업을 편하게 할 수도 있지만 설정 방법과 관련 패키지들을 이해하고 있어야 하는 것은 기본이다.
+2.  ECMAScript6 기반의 자바스크립트 코드를 작성하는 것이 보통이며 webpack을 사용하여 번들링한다.
+3.  webpack이 지원하는 다양한 로더들을 사용하여 애플리케이션의 자바스크립트 뿐만 아니라 CSS, 이미지, 폰트 등의 모든 자원들을 번들링한다.
+4.  로더들을 개별적으로 설치하고 설정해야 하기때문에 다양한 로더들의 설정방법과 작동원리 등을 이해해야 하는 부담이 있다.
+5.  CRA(create-react-app)라는 도구를 사용하여 이 작업을 편하게 할 수도 있지만 설정방법과 관련 패키지들을 이해하고 있어야 하는 것은 기본이다.
 6.  JSX(JavaScript eXtension)
-    자바스크립트 확장 문법으로 XML과 비슷하지만 잠재되어 있는 개념은 경쟁하고 있는 타 프레임워크에서 찾아보기 힘든 진보적인 특징을 가지고 있다. JSX로 작성된 코드는 번들링 과정에서 babel-loader를 통해 자바스크립트 코드(React API)로 변환된다. Babel은 react preset을 공식 지원한다. 보기 쉽고 익숙하며 babel을 통한 트랜스컴파일시 오류 검출 그리고 HTML 태그를 사용할 수 있고 컴포넌트도 JSX 코드안에 자연스럽게 삽입이 가능한 것도 큰 장점이다. 단점은 문법을 배워야 한다는 것인데 그리 어렵지 않고 보기 쉽고 금방 익숙해 진다.
+    `자바스크립트 확장 문법으로` XML과 비슷하지만 잠재되어 있는 개념은 경쟁하고 있는 타 프레임워크에서 찾아보기 힘든 진보적인 특징을 가지고 있다. JSX로 작성된 코드는 번들링 과정에서 babel-loader를 통해 자바스크립트 코드(React API)로 변환된다. Babel은 react preset을 공식 지원한다. 보기 쉽고 익숙하며 babel을 통한 트랜스컴파일시 오류 검출 그리고 HTML 태그를 사용할 수 있고 컴포넌트도 JSX 코드안에 자연스럽게 삽입이 가능한 것도 큰 장점이다. 단점은 문법을 배워야 한다는 것인데 그리 어렵지 않고 보기 쉽고 금방 익숙해 진다.
 
 ## Vue.js
 
