--- a/TechNotes/javascript-practices/02.Lexical Structure/01.변수와 식별자.md
+++ b/TechNotes/javascript-practices/02.Lexical Structure/01.변수와 식별자.md
@@ -1,5 +1,3 @@
-01.변수와 식별자
-
 ## 변수(Variable)
 
  프로그램은 어떤 목적으로 작성된 알고리즘(로직)이 데이터(값)를 지속적으로 변화시키는 과정이다. 변수는 프로그램이 변경시킨 값이다. 그런데 값을 변화시키고 변화된 상태를 유지하기 위해서는 값 자체만으로는 충분하지 않다. 값에 특정 이름을 매핑해야 값의 변화 상태를 알 수 있을 것이다. 따라서 어떤 이름이 매핑된 값을 변수라고 하는 것이 더 정확한 표현이다. 이는 다른 프로그래밍 언어도 마찬가지다. 예를 들어 설명해 보자.
@@ -8,8 +6,8 @@
 int i = 10; // C, C++, Java 
 i = 10;     // JavaScript
 ```
- i는 변수 이름이다. 10이 변수이며 10은 어떤 알고리즘에 의해 변할 수 있는 데이터(값)이다. 수학의 '임의의 값을 표현하는 기호' 라는 변수 정의에 따라 'i'를 변수라하지만 프로그래밍에서는 'i 라는 이름이 매핑된 어떤 공간에 저장된 값(10)이 변화된다' 라는 표현이 더 정확하다.
- 컴퓨터에서 값이 저장되는 어떤 공간은 메모리의 특정 영역이다. 메모리의 특정 영역은 실제로 코드상의 이름보다는 메모리 주소로 표현된다. C, C++ 언어에서는 변수이름은 메모리 주소에 대한 심볼(Symbolic Name)이 되며 컴파일(링크) 또는 실행 때에 실제 메모리주소로 매핑된다.
+ i는 변수 이름이다. 10이 변수이며 10은 어떤 알고리즘에 의해 변할 수 있는 데이터(값)이다. 수학의 '임의의 값을 표현하는 기호' 라는 변수 정의에 따라 일반적으로 'i'를 변수라 하지만 프로그래밍에서는 'i 라는 이름이 매핑된 어떤 공간에 저장된 값(10)이 변화된다' 라는 표현이 더 정확하다.
+ 컴퓨터에서 값이 저장되는 어떤 공간은 메모리의 특정 영역이다. 메모리의 특정 영역은 실제로 코드상의 이름보다는 메모리 주소로 표현된다. C, C++ 언어에서는 변수이름은 메모리 주소에 대한 심볼(Symbolic Name)이 되며 컴파일(링크) 또는 실행 시 실제 메모리 주소로 매핑된다.
 
  ECMAScript 표준에서는 변수 관리를 위한 변수의 이름과 값에 대한 매핑 자료구조의 추상적 개념을 명세하고 있다. 변수는 대입구문 또는 정의구문의 실행을 통해 생성 되기 때문에 실행 컨텍스트(Execution Context)의 어휘 환경(Lexical Environment)이라는 컴포넌트에서 관리하도록 명세하고 있으며 자바스크립트 엔진은 이를 구현한다. 뒤에서 이 명세(자바스크립트 코어)를 더 자세히 설명하도록 한다.
 
