--- a/TechNotes/javascript-practices/02.Lexical Structure/02.리터럴과 표현식.md
+++ b/TechNotes/javascript-practices/02.Lexical Structure/02.리터럴과 표현식.md
@@ -1,8 +1,6 @@
-02.리터럴과 표현식
-
 ## 리터럴(Literal)
 
- 리터럴(Literal)의 사전적 의미는 '문자그대로'란 의미이다. 프로그래밍에서는 코드 상의 문자 그대로 표현된 값을 변수로 저장한다는 의미로 이해할 수 있다. 리터럴 사용 예제를 살펴보자.
+ 리터럴(Literal)의 사전적 의미는 '문자그대로'란 의미다. 프로그래밍에서는 코드 상의 문자 그대로 표현된 값을 변수로 저장한다는 의미로 이해할 수 있다. 리터럴 사용 예제를 살펴보자.
 
 [예제: ex01]
 ```JavaScript
@@ -12,9 +10,11 @@ s1 = 'hello'
 s2 = "JavaScript is Awesome"
 ```
 
- 문자 그대로 표현된 숫자값을 i, j 에 저장하였다. 문자 그대로 표현된 문자열값을 s1, s2에 저장하였다. 문자열 리터럴 'JavaScript is Awesome'을 보면 문자열 리터럴값 표현을 위해 " 또는 '를 사용하는 것을 알 수 있다. 문장만 보면 공백문자를 포함하는 문자열이 하나의 문자열값이 된다. 따라서 공백문자까지 포함시키기 위해 따옴표를 사용한 것처럼 보이지만 조금 더 생각해 보아야 하는 어휘적 이유가 있다.
+ 문자 그대로 표현된 숫자 값을 i, j 에 저장 하였고 문자 그대로 표현된 문자열 값을 s1, s2에 저장하였다. 문자열 리터럴 'hello' 또는 "JavaScript is Awesome" 을 보면 문자열 리터럴 표현을 위해 " 또는 '를 사용하는 것을 알 수 있다.
  
- JavaScript는 따옴표를 통해 문자열이 리터럴인지 아니면 식별자인지를 구분한다. 식별자는 숫자로 시작할 수 없는 식별자 규칙때문에 숫자로 시작한다면 따옴표로 구분할 필요없이 무조건 리터럴이 된다. 다음 예제를 보자.
+ 변수 s2에 저장된 문자열은 공백 문자가 포함하는 문자열이다. 어휘분석에서 공백은 무시될 수도 있고 토큰을 구분할 때 사용될 수 있. 따라서 공백 문자까지 문자열에 포함시키기 위해 따옴표를 사용한다. 이는 겉으로 보이는 단순한 이유이기도 하지만 조금 더 생각해 보아야 하는 어휘적 이유도 있다.
+ 
+ JavaScript는 따옴표를 통해 문자열이 리터럴인지 아니면 식별자인지를 구분한다. 식별자는 숫자로 시작할 수 없는 식별자 규칙 때문에 숫자로 시작한다면 따옴표로 구분할 필요없이 무조건 넘버 리터럴이 된다. 다음 예제를 보자.
 
 [예제: ex02]
 ```javascript
@@ -23,12 +23,13 @@ orderPrice = caffeAmericano;
 orderMenu = "caffeAmericano";
 ```
 
-1.	1번 라인의 4100은 숫자 4로 시작하기 때문에 리터럴이다. = 연산자의 오른쪽은 값이어야 하기 때문에 문제가 없다. 왼쪽의 caffeAmericano는 숫자로 시작하지 않고 따옴표가 안 붙어 있기 때문에 식별자가 되어 오른쪽의 숫자값 4100을 저장하는 변수이름이 된다.
-2.	2번 라인의 = 연산자 오른쪽을 보면, 숫자로 시작하지 않는 문자열에 따옴표가 없으면 식별자이므로 caffeAmericano는 변수이름으로 값 4100을 표현한다. 이 값이 왼쪽으로 대입된다. 왼쪽도 숫자로 시작하지 않고 따옴표도 없기 때문에 식별자가 되어 orderPrice라는 변수 이름으로 오른쪽 caffeAmericano 변수가 표현하는 값 4100을 저장한다.
-3.	3번 라인을 보면, 따옴표를 붙혔기 때문에 오른쪽은 문자열 리터럴이다. 왼쪽은 2번 라인과 마찬가지로 숫자로 시작하지 않고 따옴표도 없기 때문에 식별자가 되어 orderMenu라는 변수이름으로 오른쪽의 문자열 리터럴값 "caffeAmericano"를 저장한다.
+1.	1번 라인의 4100은 숫자 4로 시작하기 때문에 넘버 리터럴이다. = 연산자의 오른쪽은 값이어야 하기 때문에 문제가 없다. 왼쪽의 caffeAmericano는 숫자로 시작하지 않고 따옴표가 안 붙어 있기 때문에 식별자가 되어 오른쪽의 숫자값 4100을 저장하는 변수 이름이 된다.
 
- 코드상에서 리터럴이 사용될 수 있는 곳은 예로 제시할 수 없을 만큼 많다. 여기서 알고 넘어가야 할 것은 리터럴은 표현식(Expression)중에 하나고 표현식이 사용될 수 있는 곳이면 어디서나 사용될 수 있다. JavaScript의 좋은 것(Good Parts, 더글라스 크라포드)중에 하나는 리터럴이 풍부하다는 것이다. 데이터 타입을 설명할 때, 데이터 타입마다 다양한 리터럴을 정리하도록 한다.
+3.	2번 라인의 = 연산자 오른쪽을 보면 따옴표 없이 숫자로 시작하지 않는 문자열은 식별자이므로 caffeAmericano는 변수 이름으로 값 4100을 표현한다. 이 값이 왼쪽으로 대입된다. 왼쪽도 숫자로 시작하지 않고 따옴표도 없기 때문에 식별자가 되어 orderPrice라는 변수 이름으로 오른쪽 caffeAmericano 변수가 표현하는 값 4100을 저장한다.
 
+5.	3번 라인을 보면, 따옴표를 붙혔기 때문에 오른쪽은 문자열 리터럴이다. 왼쪽은 숫자로 시작하지 않고 따옴표도 없기 때문에 식별자가 되어 orderMenu 라는 변수이름으로 오른쪽의 문자열 리터럴값 "caffeAmericano"를 저장한다.
+
+ 코드 상에서 리터럴이 사용될 수 있는 곳은 예로 제시할 수 없을 만큼 많다. 여기서 알고 넘어가야 할 것은 리터럴은 어떤 값을 표현하는 표현식(Expression) 중에 하나고 표현식이 사용될 수 있는 곳이면 어디서나 사용될 수 있다. JavaScript의 좋은 것(Good Parts, 더글라스 크라포드) 중에 하나는 리터럴이 풍부하다는 것이다. 데이터 타입을 설명할 때, 데이터 타입마다 다양한 리터럴을 정리한다.
 
 ## 표현식(Expression)
  하나의 특정값(value)으로 평가(Evalue)될 수 있는 JavaScript 코드를 표현식(Expression)이라 한다. 표현식에 대한 이해를 돕기위해 값 4에 대한 여러 표현식을 예로 들어 보자.
@@ -43,13 +44,13 @@ i = 4
 i
 ```
 
-1.	1번 라인: 2 + 2 는 더하기 산술연산자 + 표현식으로 연산결과가 4를 표현한다. 
-2.	2,3 번 라인: 함수 호출연산자 () 표현식으로 함수를 호출하면 4를 반환하기 때문에 4를 표현한다.
-3.	4번 라인: 리터럴 표현식이다. 표현식중에 가장 직관적이라 볼 수 있다.
-4.	5번 라인: 대입연산자 = 표현식으로 대입 연산이 평가되면 변수 i에 값 4가 저장된다. 그리고 i 자체로 값 4를 표현할 수 있다. 확인하는 방법은 console.log와 같은 함수의 아규먼트(Argument)로 이 표현식을 넣어서 호출하는 것이다. console.log 함수의 파라미터(Parameter)들에는 값을 아규먼트로 넘겨야 한다. 
-5.	6번 라인: i 변수는 값 4를 표현하는 표현식이 된다. 변수도 변수이름으로 저장된 값을 표현하는 표현식이다.
+1.	1번 라인: + 산술 연산식으로 연산 결과가 4를 표현한다. 연산식은 값을 표현하는 표현식이다.
+2.	2, 3 번 라인: () 연산자를 사용하는 함수 호출 연산식이다. 함수를 호출하면 4를 반환하기 때문에 4를 표현한다.
+3.	4번 라인: 리터럴 표현식이다. 표현식 중에 가장 직관적이다.
+4.	5번 라인: = 대입 연산식으로 대입 연산이 평가되면 변수 i에 값 4가 저장된다. 그리고 i 자체로 값 4를 표현한다. 확인하는 방법은 console.log와 같은 함수의 아규먼트(Argument)로 이 연산식을 넣어서 호출하는 것이다. console.log 함수의 파라미터(Parameter)는 값을 아규먼트로 넘겨야 한다. 
+5.	6번 라인: i 변수는 4를 표현한다. 변수도 이름으로 저장된 값을 표현하는 표현식이다.
 
- 리터럴과 값을 구분할 줄 알아야 하는데 값은 메모리에 저장되는 데이터 그 자체를 의미하지만 값은 코드상에서 다양한 표현식으로 표현할 수 있다. 예를 들어, 'i = 2 + 2;' 라는 표현식이 실행되면 산술연산자 + 표현식의 평가결과인 4라는 값은 대입연산자 = 표현식의 평가결과로 i라는 이름으로 메모리에 저장되는 데이터가 된다고 말할 수 있다.
+ 리터럴과 값을 구분할 줄 알아야 하는데 값은 메모리에 저장되는 데이터 그 자체를 의미하지만 값은 코드상에서 다양한 표현식으로 표현될 수 있다. 예를 들어, i = 2 + 2 라는 표현식이 실행되면 +산술 연산식의 평가 결과인 4는 = 대입 연산식의 평가 결과로 i라는 이름으로 메모리에 저장되는 데이터가 된다고 말할 수 있다.
  
 ## 표현식의 종류
  
