--- a/TechNotes/javascript-practices/11.Module/02. ES6 모듈 기반 애플리케이션.md
+++ b/TechNotes/javascript-practices/11.Module/02. ES6 모듈 기반 애플리케이션.md
@@ -1,5 +1,3 @@
-02. ES6 모듈 기반 애플리케이션
-
  ES6 모듈 시스템은 애플리케이션 개발시 하나의 파일에 집중되는 코드를 분리하여 개발 가능하게 해주기 때문에 코드 관리 문제를 해결할 수 있는 강력한 매커니즘을 제공해준다. 재사용 가능성이 있는 분리된 코드는 라이브러리화 하여 다른 애플리케이션 개발에 재사용 할 수도 있다. Node 기반의 백엔드와 프론트엔드 개발은 모듈 시스템이 필수이기 때문에 처음부터 CommonJS 기반 모듈 지원을 하고 있었지만 v14+ 부터 ES6 표준 모듈 지원으로 교체되었다. 뿐만 아니라 ES6 표준 모듈 시스템을 지원하는 브라우저가 점점 늘어나 현재는 대부분 브라우저가 지원하고 있다. 따라서 ES6 표준 모듈 시스템에 따라 의존성을 가지고 분리되어 있는 애플리케이션 모듈들의 개별적 브라우저 로딩도 완벽하게 보장해 준다.
  
  자바스크립트의 모듈은 js 파일 단위로 저장한다. 쉽게 말해, js파일 하나가 모듈이라 보면 된다. ES6 표준 모듈 시스템과 ES6 이전의 CommonJS 기반의 모듈 지원에서 모듈 내부의 함수, 클래스, 객체, 상수, 변수 등을 노출(Export) 하는 방법은 다르고 호환성도 없다. 다른 모듈에서 노츨된 모듈의 함수, 클래스, 객체, 상수 등을 사용하는 방법도 마찬가지다.   
@@ -184,7 +182,7 @@ export const App = function(){
 
  ES6 export 키워드를 통해 외부에 노출하는데, 노출 방법은 여러 객체를 노출하거나 하나의 객체를 노출하는 두 가지 방법으로 나눌 수 있다. 예제는 함수 하나만 export 하고 있지만 여러 객체를 노출하는 방법을 사용하고 있다. 
 
-​	앞에서 웹 애플리케이션 분리로 App.js와 index.js 두 모듈을 작성했다. 이 예제는 ES6 모듈을 테스트 하는 Node 기반 애플리케이션으로 브라우저에서 동작하는 애플리케이션이 아니다. 그래서 DOM API를 사용하여 HTMLElement 객체를 생성하는 대신 Object 타입 객체 `{}` 생성으로 바꿨다.     
+ 앞에서 웹 애플리케이션 분리로 App.js와 index.js 두 모듈을 작성했다. 이 예제는 ES6 모듈을 테스트 하는 Node 기반 애플리케이션으로 브라우저에서 동작하는 애플리케이션이 아니다. 그래서 DOM API를 사용하여 HTMLElement 객체를 생성하는 대신 Object 타입 객체 `{}` 생성으로 바꿨다.     
 
 ##### 1-2. src/index.js module
 
@@ -261,7 +259,7 @@ starts server on port 8080
 
 ​	브라우저로 접근해 보면 잘 작동하는 것을 확인할 수 있다.
 
-![ch01-0004.png](../../_resources/2112a4cdec7d46289bea627e73c243be.png)
+![ch01-0004.png](../../_resources/ch01-0004.png)
 
 #### 3. 결론
 
