--- a/TechNotes/javascript-practices/12.Development Environments/05. Babel.md
+++ b/TechNotes/javascript-practices/12.Development Environments/05. Babel.md
@@ -1,10 +1,10 @@
-05. Babel
-
 ## 트랜스컴파일러(transcompiler)
 
- 트랜스파일러(transplier) 라고도 불리는 트랜스컴파일러는 컴파일러처럼 한 언어로 작성된 코드를 다른언어로 바꾸는 도구이다. 엄밀하게 생각해보면, 컴파일이 더 큰 범주에 속한다고 볼 수 있다. 트랜스컴파일은 "하나의 언어로 작성된 소스 코드를 비슷한 수준의 추상화를 가진 같은 언어로 변환(transform)"이라고 정의하기 때문에 완전히 다른 언어로 변환하는 컴파일과는 엄밀하게 구분된다. 가령, ECMAScript 2015+ 로 작성된 JavaScript 코드를 하위 호환을 위해 ECMAScript 5 수준으로 변환하는 것을 트랜스컴파일이라 볼 수 있다. 
+ 트랜스파일러(transplier) 라고도 불리는 트랜스컴파일러는 컴파일러처럼 한 언어로 작성된 코드를 다른 언어로 바꾸는 도구이다. 엄밀하게 생각해보면, 컴파일이 더 큰 범주에 속한다고 볼 수 있다. 트랜스컴파일은 하나의 언어로 작성된 소스 코드를 비슷한 수준의 추상화를 가진 같은 언어로 변환(transform) 이라고 정의하기 때문에 완전히 다른 언어로 변역(translate)하는 컴파일과는 구분된다. 가령, ECMAScript 2015+ 로 작성된 JavaScript 코드를 하위 호환을 위해 ECMAScript 5 수준으로 변환하는 것을 트랜스컴파일이라 볼 수 있다. 
 
- ECMAScript의 비표준 스크립트 언어 TypeScript을 ECMAScript2015 의 JavaScript로 변환하는 것도 역시 트랜스컴파일로 볼 수 있는데, 여기에는 관점에 따라 논쟁의 여지가 있다. 보통, 이것은 컴파일이라 부르는 것 같다. 트랜스컴파일이냐? 컴파일이냐? 구분하는 것은 여기서는 큰 의미가 없다. 널리 사용되는 트랜스컴파일러는 [바벨(Babel)](https://babeljs.io)과 [트레이서(Traceur Compiler)](https://github.com/google/traceur-compiler) 이다. 이 중 바벨이 뛰어난 확장성으로 다양한 프레임워크와 빌더 도구에 내장되어 있어 널리 사용되고 있다.
+ ECMAScript의 비표준 스크립트 언어 TypeScript을 ECMAScript2015 의 JavaScript로 변환하는 것도 역시 트랜스컴파일로 볼 수 있는데, 여기에는 관점에 따라 논쟁의 여지가 있다. 보통, 이것은 컴파일이라 부르는 것이 맞다고 개인적으로 생각하지만 트랜스컴파일이냐? 컴파일이냐? 구분하는 것은 여기서는 별 의미가 없는 것 같다
+ 
+ 널리 사용되는 트랜스컴파일러는 [바벨(Babel)](https://babeljs.io)과 [트레이서(Traceur Compiler)](https://github.com/google/traceur-compiler) 이다. 이 중 바벨이 뛰어난 확장성으로 다양한 프레임워크와 여러 빌더 도구들에 내장되어 있다.
 
 
 ## 바벨(Babel)
@@ -12,21 +12,21 @@
  
  바벨은 변환을 위해 많은 독립적인 플러그인(plugin)들을 제공한다. 독립적이라는 의미는 각각의 플러그인이 하나의 문법 또는 하나의 구문 변환을 위해 작성되어 있다는 의미다. 플러그인의 상위 개념으로 프리셋(prepset)이 있다. 프리셋은 여러 플러그인들을 한 번에 적용할 수 있도록 플러그인들을 모아 놓은 것이다. 예를 들어, babel-preset-es2015은 ES6문법에 맞춰 작성된 JavaScript 코드의 하위 호환 변환을 위한 개별적인 문법/구문 플러그인들을 모아놓고 한 번에 ES6으로 작성된 코드를 ES5 코드로 변환하는 프리셋이다.
  
- 그런데, 프리셋은 문제가 있다. 실제 실행 환경에 맞는 변환에만 필요한 플러그인들만 모아 놓은 것이 아니라 불필요한 것도 있기 때문에 종종 의도치 않은 변환으로 인해 문제를 발생시켰다. 그렇다고 실제 실행 환경에 맞는 플러그인들 만을 개별적으로 설치하고 개별적 옵션을 적용하려면 그 갯수와 관리 그리고 알아야 할 지식도 만만치 않다. 이를 해결하기 위한 것이 Env 프리셋이다. Env 프리셋은 기본적으로 거의 모든 플러그인을 기본으로 설치한다. 하지만 장점은 실행 환경과 [ES호환성 테이블](https://kangax.github.io/compat-table/es6/)을 활용해 필요한 플러그인들만 선택 설정할 수 있다는 것이다.
+ 그런데 프리셋은 문제가 있다. 실제 실행 환경에 맞는 변환에만 필요한 플러그인들만 모아 놓은 것이 아니라 불필요한 것도 있기 때문에 종종 의도치 않은 변환으로 인해 문제를 발생시켰다. 그렇다고 실제 실행 환경에 맞는 플러그인만을 개별 설치하고 옵션을 적용하려면 그 갯수와 관리를 위해 알아야 할 지식이 만만치 않다. 이를 해결한 것이 Env 프리셋이다. Env 프리셋은 기본적으로 거의 모든 플러그인을 기본으로 설치한다. 하지만 장점은 실행 환경과 [ES호환성 테이블](https://kangax.github.io/compat-table/es6/)을 활용해 필요한 플러그인들만 선택할 수 있다.
  
- babel-preset-es2015, babel-preset-stage-x 등과 같은 년도, 스테이지별러 플러그인을 모아놓은 프리셋들의 개별 사용은 추천하지 않는다. Env 프리셋을 활용하여 실행 환경과 용도에 맞게 설정하여 하는 것을 추천한다.
+보통, babel-preset-es2015, babel-preset-stage-x 등과 같이 년도, 스테이지 별로 플러그인을 모아놓은 프리셋의 개별 사용은 추천하지 않는다. Env 프리셋을 활용하여 실행 환경과 용도에 맞게 설정하는 것을 추천한다.
  
 
 
 ## Core 라이브러리
 
- 변환 규칙은 바벨 플러그인 안에 있지만 그 규칙을 적용하여 코드 변환을 하는 기본적인 기능은 @babel/core 모듈에 있다. 프로젝트별로 사용하는 JavaScript 버젼과 종류가 다를 수 있다. 예를 들어 어떤 프로젝트는 ES6, 어떤 프로젝트는 React등을 기반할 수 있다. 따라서 설치하는 Babel 플러그인과 프리셋이 다양해지고 설정도 제 각각이다. 따라서 바벨은 프로젝트별 개발 의존성의 지역 설치와 기본이다.   
+ 변환 규칙은 바벨 플러그인 안에 있지만 그 규칙을 적용하여 변환을 하는 기본적인 기능은 @babel/core 모듈에 있다. 프로젝트마다 사용하는 JavaScript 버젼이 다르고 종류도 다르다. 예를 들어 어떤 프로젝트는 ES6, 어떤 프로젝트는 React 등을 사용할 수 있다. 따라서 설치하는 Babel 플러그인과 프리셋이 다양해지고 설정도 제 각각이라 바벨은 프로젝트 로컬 설치가 기본이다. 그리고 개발 도구 이기 때문에 개발 설치를 한다.  
 
 ```bash
 $ npm i -D @babel/core
 ```
 
-@babel/core 자체는 모듈 라이브러리이기 때문에 사용하기 위해서는 자바스크립트 코드를 작성해야 한다.
+@babel/core 자체는 모듈 라이브러리이다. 따라서 사용하기 위해서는 자바스크립트 코드로 작성 되어야 한다.
 
 [ex01/index.js]
 
@@ -35,7 +35,7 @@ const babel = require("@babel/core");
 babel.transform("const fn = () => 1;", {});
 ```
 
-ES6 코드 "const fn = () => 1;" (화살표 함수, arrow function) 를 옵션 {} (설정하지 않음) 을 적용해 변환한다. 그런데, 대부분의 변환작업은 이런 식으로 코드를 작성해 하지 않을 것이다. ES6 코드로 작성된 JavaScript 파일을 변환한 타켓 파일로 만들어 내는 CLI 작업을 할 것이다. 대부분 변환작업은 @babel/core와 @babel/cli를 같이 설치하여 CLI 명령으로 변환작업을 한다.   
+ES6 코드 "const fn = () => 1;" (화살표 함수, arrow function) 를 옵션 {} (설정하지 않음) 을 적용해 변환한다. 그런데, 대부분의 변환 작업은 이런 식으로 코드를 작성해 하지 않을 것이다. ES6 코드로 작성된 JavaScript 파일을 변환한 타켓 파일로 만들어 내는 CLI 작업을 할 것이다. 대부분 변환작업은 @babel/core와 @babel/cli를 같이 설치하여 CLI 명령으로 변환 작업을 한다.   
 
 
 ## CLI 변환 작업
@@ -61,7 +61,7 @@ $ npm i -D @babel/core @babel/cli
   |--- package-lock.json	
 </pre>
  
- src 디렉토리는 변환 대상(개발 소스 코드) js 파일이 위치할 디렉토리이고 변환 결과물(변환 배포 코드)이 저장 될 dist 디렉토리가 있다. ES6 문법으로 작성한 변환 대상이 될 코드는 다음과 같다.  
+ src 디렉토리는 개발 소스인 변환 대상 js 파일이 위치할 디렉토리이고 변환 결과물인 배포 코드가 저장 될 dist 디렉토리가 있다. 변환 대상이 되는 ES6 문법으로 작성한 코드는 다음과 같다.  
 
 [src/ex01.js]
 
@@ -91,19 +91,19 @@ for(let user of users){
 }
 ```
 
- 이제 변환해 보자. 다음 명령과 옵션으로 변환을 한다.
+ 이제 변환해 보자. 명령과 옵션은 다음과 같다.
 
 ```bash
 $ npx babel src --out-dir dist
 Successfully compiled 1 file with Babel (259ms).
 ```
- src 디렉토리의 모든 js파일을 dist 디렉토리(`--out-dir` 또는 `-d` 옵션)에 변환하는 명령이다. 결과 화면을 보면 성공적으로 변환은 되었지만 변환된 JS 파일안의 코드가 변환되지 않았다. 변환을 위해서는 변환 플러그인을 설치하고 지정해주어야 한다. 다음 실습에서는 몇 가지 플러그인을 사용해서 변환 작업을 한다.
+ src 디렉토리의 모든 js파일을 dist 디렉토리에 변환하는 명령이다. 결과 화면을 보면 성공적으로 변환은 되었지만 변환된 JS 파일안의 코드가 변환되지 않았다. 변환을 위해서는 변환 플러그인을 설치하고 설정해야 한다. 다음 실습에서는 몇 가지 플러그인을 사용해서 변환 작업을 한다.
 
 
 
 ## 바벨 플러그인
 
- 플러그인을 적요한 변환 작업을 실습해 보기 위해 프로젝트를 생성하고 다음과 같이 최기화 및 패키지를 설치한다.
+ 플러그인을 적용한 변환 작업을 실습해 보기 위해 프로젝트를 생성하고 패키지를 설치한다.
 
 1. 프로젝트 생성 및 패키지 설치
 
@@ -124,7 +124,7 @@ $ npm i -D @babel/core @babel/cli
   |--- package-lock.json	
 </pre>
  
- ES6 문법으로 작성한 변환 대상이 될 코드는 앞의 예제 코드와 같다.  
+ ES6 문법으로 작성한 변환 대상 코드는 앞의 예제 코드와 같다.  
 
 [src/ex01.js]
 
@@ -150,7 +150,7 @@ for(let user of users){
 }
 ```
 
- 이제 플러그인을 하나씩 추가 해가면서 변환 해 보자. 첫 번째는 '블록 스코프 변수' 변환이다. 이 변환을 해 주는 플러그인은 @babel/plugin-transform-block-scoping 플러그인이다. 설치와 변환은 다음과 같다.
+ 이제 플러그인을 하나씩 추가 해가면서 변환 해 보자. 첫 번째는 '블록 스코프 변수' 변환이다. 이 변환을 하는 플러그인은 @babel/plugin-transform-block-scoping 플러그인이다. 설치와 변환은 다음과 같다.
 
 ```bash
 $ npm i -D @babel/plugin-transform-block-scoping
@@ -184,7 +184,7 @@ $ npx babel src/ex01.js -o dist/ex01.04.js --plugins @babel/plugin-transform-for
 $ npx babel src/ex01.js -o dist/ex01.all.js --plugins @babel/plugin-transform-block-scoping --plugins @babel/plugin-transform-parameters --plugins @babel/plugin-transform-template-literals --plugins @babel/plugin-transform-for-of
 ```
 
- 변환된 파일들을 살펴보면 트랜스컴파일이 잘되는 것을 확인할 수 있다. 해당 구문을 트랜스파일을 하기위해서는 해당 플러그인을 개별적으로 알아야 하는 것도 있지만 개별적 설치와 CLI에서 --plugins 옵션을 개별적으로 붙혀야 하는 것들이 불편해 보인다. 바벨의 프리셋(preset)은 이런 플러그인들을 모아 놓고 한 번에 적용하기 위한 플러그인들의 모음이다. 프리셋의 종류는 다양하다. ECMAScript 년도별 프리셋, stage(0,1,2,3) 레벨별 프리셋 그리고 React 변환, Typescript 변환 프리셋 등이 있다.
+ 변환된 파일들을 살펴보면 트랜스컴파일이 잘 되는 것을 확인할 수 있다. 해당 구문을 트랜스파일을 하기위해서는 해당 플러그인을 개별적으로 알아야 하는 것도 있지만 개별적 설치와 CLI에서 --plugins 옵션을 개별적으로 붙혀야 하는 것들이 불편해 보인다. 바벨의 프리셋은 이런 플러그인들을 모아 놓고 한 번에 적용하기 위한 플러그인들의 모음이다. 프리셋의 종류는 다양하다. ECMAScript 년도별 프리셋, stage(0,1,2,3) 레벨 프리셋 그리고 React 변환, TypeScript 변환 프리셋 등이 있다.
  
  문제는 이런 프리셋에 포함된 플러그인들이 프로젝트의 모든 코드에 일괄적으로 적용되어 변환하는 것이다. 만약, 프로젝트에 적용되지 말아야 할 플러그인이 있다면 문제가 발생할 수 있다. 이런 문제를 해결한 것이 'Env preset'이다. stage3 이상 되는 문법의 플러그인들이 설치되며 babel.config.json로 다양하고 스마트한 변환 설정을 할 수 있다.
 
